package Entidade;

public class Conquistas {
}
