package Entidade;

public abstract class Item {
}
