package Entidade;

public class Perfil extends Usuario{
}
