package Entidade.Produtos;

import Entidade.Item;

public class Card extends Item {
}
