package Entidade.Produtos;

import Entidade.Item;

public class Jogos extends Item {
}
