package Entidade.Produtos;

import Entidade.Item;

public class ProdutosFisicos extends Item {
}
