package Entidade.Produtos;

import Entidade.Item;

public class Skin extends Item {
}
