package Entidade.Produtos;

import Entidade.Item;

public class Software extends Item {
}
