package Entidade.Produtos;

public class Soundtrack extends Jogos {
}
