package Entidade;

public class Usuario {
}
