@startuml
class BancoDeDados {
    - jogoLista: Jogo[]
    - softwareLista: Software[]
    - soundtrackLista: Soundtrack[]
    - cardsLista: Cards[]
    - skinsLista: Skins[]
    - fisicosLista: ProdutosFisicos[]

    + adicionarJogo()
    + removerJogo()
    + adicionarSoftware()
    + removerSoftware()
    + adicionarSoundtrack()
    + removerSoundtrack()
    + adicionarCards()
    + removerCards()
    + adicionarSkins()
    + removerSkins()
    + adicionarFisicos()
    + removerFisicos()
}

class LeitorDeDados {
    + lerJogo()
    + lerSoftware()
    + lerSoundTrack()
    + lerSkin()
    + lerCard()
    + lerProdutoFisico() // Alterar depois
}

class ProdutosFisicos {
    - descrição: String
    - tamanho: Double

    + calcularFrete()
}

class Usuario {
    - username: string
    - email: string
    - senha: string
}

class Perfil {
    - apelido: string
    - amigos: Usuario[]
    - conquistas: Conquistas[]
    - listaDesejos: Item[]

    + adicionarAmigo()
    + removerAmigo()
    + adicionarItem()
    + removerItem()
    + promoção()
    + mostrarConquistas()
    + mudarApelido()
}

abstract class Loja {
    - item: Item[]

    + {abstract} procurar()
    + {abstract} comprar()
    + {abstract} filtrarItem()
}

class Biblioteca {
    - item: Item[]

    + abrirItem()
    + fecharItem()
    + gerenciarArquivos()
    + instalarItem()
    + desinstalarItem()
}

abstract class Item {
    - nome: string
    - id: string
    - preço: string
    - comprado: boolean
    - aberto: boolean
    - instalado: boolean
}

class Jogo {
    - tempoDeUso: float
    - temConquista: boolean

    + contabilizarTempo()
}

class Software {
    - tempoDeUso: float

    + contabilizarTempo()
}

class Soundtrack {
    - tocando: boolean

    + tocar()
    + pausar()
    + proximo()
    + mudarVolume()
}

class Cards {
    - nomeDoCard: String
    - ItemRelacionado: Item // Alterar depois
    - CardsParaInsígnia: int

    + craftarInsígnia()
}

class Skins {
    - nomeDaSkin: String
    - ItemRelacionado: Jogo
    - conquistado: boolean

    + equipar()
}

class Conquistas {
    - nomeDaConquista: string
    - descriçãoDaConquista: string
    - jogoRelacionado: Jogo

    + desbloquearConquista()
}

Usuario --> Perfil
Perfil *-- Loja
Perfil *-- Biblioteca
Loja --> Item
Biblioteca .. Item
Item --|> Jogo
Item --|> Software
Item --|> Soundtrack
Item --|> Cards
Item --|> Skins
Jogo ..> Soundtrack
Jogo "tem" .. Conquistas
ProdutosFisicos --|> Item

note left of Item : -item-

note left of ProdutosFisicos : -desc-
note left of ProdutosFisicos : -tamanho-
note left of ProdutosFisicos : -promoção-

@enduml